--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
  <body> 
      <h1>Hello</h1>
      HELLO ALL💕
+<img src="https://octodex.github.com/images/vinyltocat.png">
 <html>
     <body>
         Hello there's an awesome person
