--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <title>Welcome all</title>
 </head>
  <body> 
+<ol>
+    <li>This</li>
+    <li>Is an</li>
+    <li>Ordered list</li>
+</ol>
      <h1>Hello</h1>
      HELLO ALL💕
 <img src="https://octodex.github.com/images/vinyltocat.png">
