--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 
 <head>
     <title>Welcome all</title>
+    <head>
+        <title>I am a title!</title>
+        <link rel="stylesheet" href="style.css">
+    </head>
 </head>
  <body> 
 <ol>
